<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Транспорт МК</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="form_title">Внесете ја почетната и крајната станица:</string>
    <string name="hint_from">Од</string>
    <string name="hint_to">До</string>
    <string name="transportType1">Сеедно</string>
    <string name="transportType2">Автобус</string>
    <string name="transportType3">Воз</string>
    <string name="transportType">Изберете тип на превоз...</string>
    <string name="form_button">Пребарувај</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="label_departure">Тргнува во:</string>
    <string name="label_arrival">Пристигнува во:</string>
    <string name="description_vehicle_type">Vehicle Type</string>
    <string name="description_arrow">Arrow</string>
    <string name="label_regularity">Редовност:</string>

</resources>
