<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.transportmk.transportmk.FormFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        android:textSize="10pt" />

    <AutoCompleteTextView
        android:id="@+id/tbFrom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:completionThreshold="1"
        android:hint="@string/hint_from"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/tbTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:completionThreshold="1"
        android:hint="@string/hint_to"
        android:inputType="text" />

    <Spinner
        android:id="@+id/transportType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/transportTypeList"
        android:prompt="@string/transportType"/>

    <Button
        android:id="@+id/btnGetLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_button"/>

</LinearLayout>
