<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip">

    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dip"
        android:background="@drawable/image_bg"
        android:padding="3dip">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/description_vehicle_type" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/label_departure"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:gravity="end"
            android:text="@string/label_arrival"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/regularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="1dip"
            android:text="@string/label_regularity"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Departure Time-->
        <TextView
            android:id="@+id/departureTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Arrival Time -->
        <TextView
            android:id="@+id/arrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Regularity Type -->
        <TextView
            android:id="@+id/regularityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:textColor="#040404"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Rightend Arrow -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_arrow" />

</LinearLayout>